Update for reports Fix non-totaling error for reports Added test data to the sql Added error handling to missing or invalid name NOTE: duration() still needs work for both projects and shifts time can no longer be just subtracted by just hours

--- a/bscah-homebase/reports.css
+++ b/bscah-homebase/reports.css
@@ -130,23 +130,3 @@
 #report-submit :hover {
     color: #333;
 }
-
-#loading {
-  width: 50%;
-  height: 50%;
-  top: 0px;
-  left: 0px;
-  position: fixed;
-  display: block;
-  opacity: 0.7;
-  background-color: #fff;
-  z-index: 99;
-  text-align: center;
-}
-
-#loading-image {
-  position: absolute;
-  top: 100px;
-  left: 0px;
-  z-index: 100;
-}
